--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -73,7 +73,7 @@ header{position:fixed;top:0;left:0;width:100%;background: #fff;z-index:10;height
 }
 
 
-.ts_ps{display: block;color: #fd4f57;font-size: 14px;margin: 10px 0;}
+.ts_ps{display: block;color: #fd4f57 !important;font-size: 14px !important;margin: 10px 0;}
 .text-danger{color: red;}
 
 
@@ -136,7 +136,7 @@ line-height: 16px;margin-right: 18px;background-size: 16px 16px;font-size: 16px;
 .nav .mn_type .ul_type {background: #fff;border: 1px solid #eee;border-radius: 4px; width: 100px;padding:10px 20px;}
 .nav .mn_type .ul_type li{padding-left: 25px;line-height: 16px;margin: 16px 0;cursor: pointer;font-size: 16px;}
 .nav .mn_type .ul_type li.currency_select_EUR{background: url(../img/png/eur1.png) no-repeat left center;background-size: 16px 16px;}
-.nav .mn_type .ul_type li.currency_select_GBP{background: url(../img/png/zar1.png) no-repeat left center;background-size: 16px 16px;}
+.nav .mn_type .ul_type li.currency_select_GBP{background: url(../img/png/ngn1.png) no-repeat left center;background-size: 16px 16px;}
 .nav .mn_type .ul_type li.currency_select_USD{background: url(../img/png/usd1.png) no-repeat left center;background-size: 16px 16px;}
 
 .nav .logo a{display: block;width: 334px;margin: auto;}
@@ -189,34 +189,6 @@ display: block;float: left;height: 30px;opacity: .5;}
 	0%{width: 286px;opacity: 1;}
 	100%{width: 0px;opacity: 0;}
 }
-
-/**购物车**/
-.nav_cart {box-shadow: 0 5px 10px 2px rgba(222,222,222,.5);width: 26.04vw;padding: 0 2.08vw;
-position: absolute;right: 0;top: 0;z-index: 11;display: none;min-height: 13vw;
-background:#fff url(../img/loading.gif) no-repeat center bottom 1vw;background-size: 4.5vw 4.5vw;}
-.nav_cart h1{font-size: 1.25vw;color: #000;font-weight: bold;line-height: 1.25vw;margin-top: 4.16vw;margin-bottom: 2.18vw;} 
-.nav_cart h1 .close{float: right;width: 1.04vw;height: 1.14vw;cursor: pointer;transition: all .5s;}
-.nav_cart h1 .close:hover{transform: rotate(90deg);}
-.nav_cart .cart_ul{max-height: 19.37vw;overflow-y: scroll;padding-right: 2.08vw;}
-.nav_cart .cart_ul li{margin-bottom: 1.25vw;}
-.nav_cart .cart_ul li .pic_img{width: 5.2vw;height: 5.2vw;background: #cfcfcf;float: left;overflow: hidden;}
-.nav_cart .cart_ul li .pic_img img{display: block;width: 100%;transition: all .5s;}
-.nav_cart .cart_ul li .text{float: right;text-align: right;max-width: 13vw;}
-.nav_cart .cart_ul li .text h2{font-size: 0.93vw;color: #333;line-height:1.3vw;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;}
-.nav_cart .cart_ul li .text p{font-size: 0.72vw;line-height: 0.72vw;padding-bottom: 0.52vw;}
-.nav_cart .cart_ul li .text span{font-size: 0.93vw;color: #333;line-height: 0.93vw;}
-.nav_cart .cart_ul li:hover .pic_img img{transform: scale(1.2);}
-.nav_cart hr{background: #ccc;width: 18.75vw;height: 1px;border: none;position: relative;top: -1px;}
-.nav_cart .bot{padding-right: 2.78vw;}
-.nav_cart .bot .p_top{font-size: 0.83vw;color: #333;line-height: 0.83vw;margin-top:1.14vw;}
-.nav_cart .bot .p_bot{font-size: 1.45vw;color: #000;line-height: 1.45vw;margin-top: 1.25vw;font-weight: bold;}
-.nav_cart .bot span{float: right;}
-.nav_cart .bot a.a_btn{font-size: 0.83vw;color: #fff;text-align: center;width: 100%;height: 2.08vw;line-height: 2.08vw;background: #000;
-border-radius: 50px;display: block;margin: 1.87vw 0 0 0;}
-.nav_cart .has{background: #fff;padding-bottom: 2.29vw;}
-.nav_cart .null {padding: 3.05vw 0 5.2vw 0;display: block;background: #fff;}
-.nav_cart .null p{font-size: 0.83vw;color: #333;text-align: center;}
-
 
 /*footer*/
 .footer{background: #eee;padding: 3.22vw 0 3.43vw 0;display: block;}
@@ -274,7 +246,7 @@ text-align: center; position: absolute;bottom: 10px;}
 .yd_footer p span{font-weight: bold;font-size: 0.2rem;}
 
 
-.yd_footer2{position: fixed;bottom: 0;left: 0;width: 100%;height:1rem;background: #fff;z-index: 99;display: none;}
+.yd_footer2{position: fixed;bottom: 0;left: 0;width: 100%;height:1rem;background: #fff;z-index: 99;display: none;-webkit-overflow-scrolling: touch;}
 .yd_footer2 .ol_ydfot{border-top: 1px solid #ddd;}
 .yd_footer2 .ol_ydfot li{float: left;width: 20%;text-align: center;position: relative;}
 .yd_footer2 .ol_ydfot li .a_text{position: absolute;bottom: 100%;left: 0;display: none;}
@@ -309,6 +281,33 @@ display: block;width: 100%;padding:0 0.4rem;box-sizing: border-box;}
 	.nav .mn_type .top img{transition: all .5s;display: block;margin: auto;}
 	.nav .mn_type .top:hover img{transform: rotate(180deg);}
 	.nav .mn_type .top.active img{transform: rotate(180deg);}
+	
+	/**购物车**/
+	.nav_cart {box-shadow: 0 5px 10px 2px rgba(222,222,222,.5);width: 26.04vw;padding: 0 2.08vw;
+	position: absolute;right: 0;top: 0;z-index: 11;display: none;min-height: 13vw;
+	background:#fff url(../img/loading.gif) no-repeat center bottom 1vw;background-size: 4.5vw 4.5vw;}
+	.nav_cart h1{font-size: 1.25vw;color: #000;font-weight: bold;line-height: 1.25vw;margin-top: 4.16vw;margin-bottom: 2.18vw;} 
+	.nav_cart h1 .close{float: right;width: 1.04vw;height: 1.14vw;cursor: pointer;transition: all .5s;}
+	.nav_cart h1 .close:hover{transform: rotate(90deg);}
+	.nav_cart .cart_ul{max-height: 19.37vw;overflow-y: auto;padding-right: 2.08vw;}
+	.nav_cart .cart_ul li{margin-bottom: 1.25vw;}
+	.nav_cart .cart_ul li .pic_img{width: 5.2vw;height: 5.2vw;background: #cfcfcf;float: left;overflow: hidden;}
+	.nav_cart .cart_ul li .pic_img img{display: block;width: 100%;transition: all .5s;}
+	.nav_cart .cart_ul li .text{float: right;text-align: right;max-width: 13vw;}
+	.nav_cart .cart_ul li .text h2{font-size: 0.93vw;color: #333;line-height:1.3vw;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;}
+	.nav_cart .cart_ul li .text p{font-size: 0.72vw;line-height: 0.72vw;padding-bottom: 0.52vw;}
+	.nav_cart .cart_ul li .text span{font-size: 0.93vw;color: #333;line-height: 0.93vw;}
+	.nav_cart .cart_ul li:hover .pic_img img{transform: scale(1.2);}
+	.nav_cart hr{background: #ccc;width: 18.75vw;height: 1px;border: none;position: relative;top: -1px;}
+	.nav_cart .bot{padding-right: 2.78vw;}
+	.nav_cart .bot .p_top{font-size: 0.83vw;color: #333;line-height: 0.83vw;margin-top:1.14vw;}
+	.nav_cart .bot .p_bot{font-size: 1.45vw;color: #000;line-height: 1.45vw;margin-top: 1.25vw;font-weight: bold;}
+	.nav_cart .bot span{float: right;}
+	.nav_cart .bot a.a_btn{font-size: 0.83vw;color: #fff;text-align: center;width: 100%;height: 2.08vw;line-height: 2.08vw;background: #000;
+	border-radius: 50px;display: block;margin: 1.87vw 0 0 0;}
+	.nav_cart .has{background: #fff;padding-bottom: 2.29vw;}
+	.nav_cart .null {padding: 3.05vw 0 5.2vw 0;display: block;background: #fff;}
+	.nav_cart .null p{font-size: 0.83vw;color: #333;text-align: center;}
 }
 
 @media (min-width: 1px) and (max-width: 992px) {
@@ -321,8 +320,8 @@ display: block;width: 100%;padding:0 0.4rem;box-sizing: border-box;}
 	.nav_ul{display: none;}
 	.nav .whatapp{display: none;}
 	.nav .mn_type{left: auto !important; right: 0.4rem;top: 0.44rem;}
-	.nav .mn_type .top p{font-size: 0.24rem;line-height: 0.3rem;padding-left: 0.47rem;background-size: 0.3rem 0.3rem;margin-right: 0.15rem;}
-	.nav .mn_type .top .pic_img{padding: 0;width: 0.18rem;height: 0.1rem;top: 0.1rem;}
+	.nav .mn_type .top p{font-size: 0.24rem;height: 0.34rem; line-height: 0.34rem;padding-left: 0.47rem;background-size: 0.3rem 0.3rem;margin-right: 0.15rem;}
+	.nav .mn_type .top .pic_img{padding: 0;width: 0.18rem;height: 0.1rem;top: 0.12rem;}
 	.nav .mn_type .top .pic_img img{transition: all .5s;display: block;margin: auto;}
 	.nav .mn_type .bot{top: 0.25rem;padding-top: 0.08rem;left: -0.3rem;}
 	.nav .mn_type .bot span{display: block;width: 0;height: 0;border-width: 0 0.1rem 0.1rem; border-style: solid;
@@ -331,9 +330,10 @@ display: block;width: 100%;padding:0 0.4rem;box-sizing: border-box;}
 	 border-color: transparent transparent #fff;position: absolute;top: 1px;left: -0.1rem;}
 	.nav .mn_type .ul_type {background: #fff;border: 1px solid #eee;border-radius: 4px; width: 2rem;padding:0.1rem 0.2rem 0.1rem 0.29rem;}
 	.nav .mn_type .ul_type li{padding-left: 0.5rem;font-size: 0.24rem; line-height: 0.3rem;margin: 0.35rem 0;}
-	.nav .mn_type .ul_type li:nth-child(1){background: url(../img/png/eur1.png) no-repeat left center;background-size: 0.3rem 0.3rem;}
-	.nav .mn_type .ul_type li:nth-child(2){background: url(../img/png/ngn1.png) no-repeat left center;background-size: 0.3rem 0.3rem;}
-	.nav .mn_type .ul_type li:nth-child(3){background: url(../img/png/zar1.png) no-repeat left center;background-size: 0.3rem 0.3rem;}
+	
+	.nav .mn_type .ul_type li.currency_select_EUR{background: url(../img/png/eur1.png) no-repeat left center;background-size: 0.3rem 0.3rem;}
+	.nav .mn_type .ul_type li.currency_select_GBP{background: url(../img/png/ngn1.png) no-repeat left center;background-size: 0.3rem 0.3rem;}
+	.nav .mn_type .ul_type li.currency_select_USD{background: url(../img/png/usd1.png) no-repeat left center;background-size: 0.3rem 0.3rem;}
 	
 	.nav form.search{border-bottom: 2px solid #d5af74;width: 100%;height: 0.96rem;line-height: 0.96rem;box-sizing: border-box;
 	opacity: 0;background: #fff;border-radius: 0;position: absolute;right: 0%;left: 0; top:1.2rem;z-index: 9;}
@@ -361,8 +361,8 @@ display: block;width: 100%;padding:0 0.4rem;box-sizing: border-box;}
 	
 	.nav>.right{position: absolute;top: 0.45rem;left: 1rem;}
 	
-	.nav .img_ol li{display: none;width: 0.34rem;height: 0.31rem;}
-	.nav .nav_off{position: absolute;left: 0.4rem;top: 0.45rem;width: 0.38rem;height: 0.31rem;
+	.nav .img_ol li{display: none;width: 0.34rem;height: 0.32rem;}
+	.nav .nav_off{position: absolute;left: 0.4rem;top: 0.45rem;width: 0.38rem;height: 0.32rem;
 	background: url(../img/png/menu.png) no-repeat;background-size: 0.38rem 0.31rem;}
 	
 	.xf_right{bottom: 1.2rem;}
@@ -376,6 +376,36 @@ display: block;width: 100%;padding:0 0.4rem;box-sizing: border-box;}
 	.xf_right .vip:hover{background:#fff url(../img/png/yd_vip.png) no-repeat center center;background-size: 0.66rem 0.60rem;}
 	.xf_right .top:hover{background:#fff url(../img/png/yd_top.png) no-repeat center center;background-size: 0.32rem 0.32rem;}
 	
+	/**购物车**/
+	.nav_cart {box-shadow: 0 5px 10px 2px rgba(222,222,222,.5);width:3rem;padding: 0 0.4rem;
+	position: absolute;right: 0;top: 0;z-index: 11;display: none;min-height: 3rem;
+	background:#fff url(../img/loading.gif) no-repeat center bottom 0.5rem;background-size: 0.8rem;}
+	.nav_cart h1{font-size: 0.16rem;color: #000;font-weight: bold;margin-top:0.4rem;margin-bottom: 0.2rem;} 
+	.nav_cart h1 .close{float: right;width: 0.1rem;height: 0.1rem;cursor: pointer;transition: all .5s;margin-top: 0.03rem;}
+	.nav_cart h1 .close img{display: block;}
+	
+	.nav_cart .cart_ul{max-height: 5rem;overflow-y: auto;}
+	.nav_cart .cart_ul li{margin-bottom: 0.2rem;}
+	
+	.nav_cart .cart_ul li .pic_img{width: 0.7rem;height:0.7rem;background: #cfcfcf;float: left;overflow: hidden;}
+	.nav_cart .cart_ul li .pic_img img{display: block;width: 100%;transition: all .5s;}
+	
+	.nav_cart .cart_ul li .text{float: right;text-align: right;max-width:1.5rem;}
+	.nav_cart .cart_ul li .text h2{font-size: 0.14rem;color: #333;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;}
+	.nav_cart .cart_ul li .text p{font-size: 0.12rem;}
+	.nav_cart .cart_ul li .text span{font-size: 0.14rem;color: #333;}
+	
+	.nav_cart hr{background: #ccc;width: 100%;height: 1px;border: none;position: relative;top: -1px;}
+	.nav_cart .bot .p_top{font-size: 0.16rem;color: #333;margin-top:0.15rem;}
+	.nav_cart .bot .p_bot{font-size: 0.18rem;color: #000;margin-top: 0.1rem;font-weight: bold;}
+	.nav_cart .bot span{float: right;}
+	.nav_cart .bot a.a_btn{font-size: 0.16rem;color: #fff;text-align: center;width: 100%;height: 0.4rem;line-height: 0.4rem;background: #000;
+	border-radius: 50px;display: block;margin: 0.2rem 0 0 0;}
+	.nav_cart .has{background: #fff;padding-bottom: 0.4rem;}
+	.nav_cart .null {padding: 0.5rem 0 1.2rem 0;display: block;background: #fff;}
+	.nav_cart .null p{font-size: 0.16rem;color: #333;text-align: center;}
+	
+	
 }
 @media (min-width:752px) and (max-width:992px) {
 	.nav .logo img{margin: 0 ;position: absolute;top: 50%;margin-top: -25px;left: 50%;margin-left: -167px;}
@@ -383,7 +413,7 @@ display: block;width: 100%;padding:0 0.4rem;box-sizing: border-box;}
 }
 @media (min-width: 1px) and (max-width: 751px) {
 	.content{width: 100%;}
-	.nav .img_ol li.search_li{display: block;margin: 0;background-size:0.32rem 0.31rem;}
+	.nav .img_ol li.search_li{display: block;margin: 0;background-size:0.32rem 0.3rem;}
 	.nav .logo{position: absolute;top: 0.4rem;left: 2.29rem;width: 2.92rem;height: 0.4rem;}
 	.nav .logo img{display: block ;margin: 0;}
 	.nav .logo a{display: block;width: 2.9rem;margin: auto;}
