--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -644,8 +644,8 @@
 	.peo_center .m_or_det .bot_ol>li .pic_img img{display: block;width: 100%;}
 	.peo_center .m_or_det .bot_ol>li>p{display: block;float: left;line-height: 5vw;font-size: 0.83vw;color: #333;}
 	.peo_center .m_or_det .bot_ol>li>p a{display: block;width: 10vw;text-overflow: ellipsis;white-space: nowrap;overflow: hidden;font-size: 0.83vw;color: #333;}
-	.peo_center .m_or_det .bot_ol>li .type {padding: 0.93vw 0;margin: 0 3.4vw;display: block;float: left;}
-	.peo_center .m_or_det .bot_ol>li .type p{line-height: 1.56vw;font-size: 0.83vw;color: #333;}
+	.peo_center .m_or_det .bot_ol>li .type {margin: 0 3.4vw;display: block;float: left;}
+	.peo_center .m_or_det .bot_ol>li .type p{line-height: 1.2vw;font-size: 0.83vw;color: #333;}
 	.peo_center .m_or_det .total{border-top: 1px solid #eee;border-bottom: 1px solid #eee;padding: 0 2.08vw;}
 	.peo_center .m_or_det .total p.p1{font-size: 0.83vw;color: #333;line-height: 1.04vw;margin-top: 1.04vw;}
 	.peo_center .m_or_det .total p.p2{font-size: 1.45vw;font-weight: bold; color: #333;line-height: 2vw;margin: 0.52vw 0;}
@@ -826,15 +826,15 @@
 	.view_order .ship .text button:hover{background: #333;border: 1px solid #333;color: #fff;}
 	.view_order .bot {border: 1px solid #eee;}
 	.view_order .bot .text{padding: 0 24px;}
-	.view_order .bot .text .span_div span{display: block;height: 52px;line-height: 52px;float: right;font-size: 16px;width: 130px;text-align: center;}
-	.view_order .bot .text .span_div span.cl_len{width: 260px;}
+	.view_order .bot .text .span_div span{display: block;height: 52px;line-height: 52px;float: right;font-size: 16px;width: 80px;text-align: center;}
+	.view_order .bot .text .span_div span.cl_len{width: 295px;}
 	.view_order .bot .order_ul .yd_i{display: none;}
 	.view_order .bot .order_ul {border-top: 1px solid #eee;border-bottom: 1px solid #eee;padding-top: 24px;}
 	.view_order .bot .order_ul li{margin-bottom: 24px;}
 	.view_order .bot .order_ul .pic_img{width: 96px;height: 96px;display: block;background: #999;float: left;}
 	.view_order .bot .order_ul .ov_text{width: 180px;font-size: 16px;line-height: 96px;float: left;margin-left: 10px;}
-	.view_order .bot .order_ul span{width: 130px;display: block;line-height: 96px;font-size: 16px;float: right;text-align: center;}
-	.view_order .bot .order_ul span.length{width: 260px;}
+	.view_order .bot .order_ul span{width: 80px;display: block;line-height: 96px;font-size: 16px;float: right;text-align: center;}
+	.view_order .bot .order_ul span.length{width: 295px;}
 	.view_order .bot .total{padding: 0 24px;margin-bottom: 24px;}
 	.view_order .bot .total p{font-size: 16px;display: block;float: right;width: 270px;clear: both;padding-top: 20px;line-height: 20px;margin-right: 20px;}
 	.view_order .bot .total p .p_span{font-weight: bold;font-size: 20px;}
@@ -1165,6 +1165,7 @@
 	/************search_div**************/
 	.search_div {background: #fff !important;}
 	.search_div h1{font-size: 30px;color: #333;font-weight: normal;margin-bottom: 10px;}
+	.search_div .sec_p{font-size: 20px;}
 	.search_div  .form_sr p.p_sr{font-size: 14px;margin-bottom: 10px;}
 	.search_div  .form_sr .input_sr{width: 32%;height: 50px;line-height: 50px;border: 1px solid #ccc;border-radius: 5px;
 	margin-right:40px;clear: both;float: left;padding: 0 10px;box-sizing: border-box;font-size: 16px;}
@@ -1779,7 +1780,7 @@
 	.peo_center .m_or_det .bot_ol>li>p{display: block;float: left;line-height: 0.26rem;font-size: 0.2rem;font-family: san_m; color: #333;}
 	.peo_center .m_or_det .bot_ol>li>p a{display: block;width: 2.3rem;text-overflow: ellipsis;white-space: nowrap;overflow: hidden;font-size: 0.2rem;color: #333;}
 	.peo_center .m_or_det .bot_ol>li .type {display: block;position: absolute;bottom: 0;left: 1.1rem;}
-	.peo_center .m_or_det .bot_ol>li .type p{line-height: 0.24rem;font-size:0.2rem;font-family: san_r; color: #333;}
+	.peo_center .m_or_det .bot_ol>li .type p{line-height: 0.18rem;font-size:0.16rem;font-family: san_r; color: #333;}
 	.peo_center .m_or_det .bot_ol>li>p.price{line-height: 1rem;float: right;font-size: 0.24rem;}
 	.peo_center .m_or_det .total{border-top: 1px solid #eee;border-bottom: 1px solid #eee;}
 	.peo_center .m_or_det .total p.p1{font-size: 0.24rem;font-family: san_r; color: #333;line-height: 0.3rem;margin-top:0.26rem;}
@@ -2262,7 +2263,8 @@
 	
 	/************search_div**************/
 	.search_div {background: #fff !important;padding: 0 0.2rem !important;}
-	.search_div h1{font-size: 0.3rem;color: #333;font-weight: normal;margin: 0.2rem 0 0.2rem 0;}
+	.search_div h1{font-size: 0.36rem;color: #333;font-weight: bold;margin: 0.2rem 0 0.2rem 0;}
+	.search_div .sec_p{font-size: 0.28rem;}
 	.search_div  .form_sr p.p_sr{font-size: 0.16rem;margin-bottom: 0.21rem;}
 	.search_div  .form_sr .input_sr{width: 100%;height: 0.5rem;line-height: 0.5rem;border: 1px solid #ccc;border-radius: 5px;
 	padding: 0 0.1rem;box-sizing: border-box;margin-bottom: 0.2rem;}
