--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -1471,10 +1471,11 @@
 	.shop2_content .check_input{width: 0.25rem;height: 0.25rem;display: block; position: absolute;top: 50%;margin-top: -0.15rem; left: 0;z-index: 2;cursor: pointer;opacity: 0;}
 	.shop2_content .check_i{width: 0.25rem;height: 0.25rem;display: block; position: absolute;top: 50%;margin-top: -0.15rem; left: 0;z-index: 1;
 	border: 1px solid #999;border-radius: 1px;box-sizing: border-box;}
-	.shop2_content .check_i.active:after{display: block;position: absolute;top: 0.06rem;left: 0.05rem;content: "";border: 0.02rem solid #000; width: 0.12rem;height: 0.05rem;
-	 border-width: 0 0 0.02rem 0.02rem;transform: rotate(-45deg); }
-	.shop2_content .shop2_ul li{border-top: 1px solid #ccc;position: relative;padding: 0.4rem 0 0.76rem 0.45rem;}
-	.shop2_content .shop2_ul li .dx_label{width: 0.25rem;height: 0.25rem;display: block;position: absolute;top: 50%;margin-top: -0.15rem; left: 0;}
+	.shop2_content .check_i.active:before{display: block;position: absolute;top: 0.06rem;left: 0.03rem;content: "";border: 2px solid #000; width: 0.13rem;height: 0.04rem;
+	 border-width: 0 0 1px 1px;transform: rotate(-45deg);}
+	.shop2_content .shop2_ul li{border-top: 1px solid #ccc;position: relative;padding: 0.4rem 0 0.76rem 0.45rem;z-index: 9;}
+	.shop2_content .shop2_ul li .dx_label{width: 0.25rem;height: 0.25rem;display: block;position: absolute;top: 50%;
+	margin-top: -0.15rem; left: 0;z-index: 9;}
 	.shop2_content .shop2_ul .pic_img{width: 1.8rem;float: left;}
 	.shop2_content .shop2_ul .pic_img a{display: block;}
 	.shop2_content .shop2_ul .pic_img a img{display: block;}
@@ -1482,10 +1483,10 @@
 	.shop2_content .shop2_ul .text a.a_bt{font-family: san_m; font-size: 0.2rem;color: #333;line-height: 0.24rem;display: block;
 	width: 100%;text-overflow: ellipsis;white-space: nowrap;overflow: hidden;margin-bottom: 0.2rem;}
 	.shop2_content .shop2_ul .text p{font-size: 0.2rem;font-family: san_r;color: #333;line-height: 0.3rem;}
-	.shop2_content .price{width: 1.8rem;text-align: center;position: absolute;right: 0;bottom: 0.58rem;}
+	.shop2_content .price{width: 1.8rem;text-align: center;position: absolute;right: 0;bottom: 0.53rem;}
 	.shop2_content .price p{font-size: 0.24rem;font-family: san_r;color: #fe2a4d;}
 	.shop2_content .price p span{text-decoration: line-through;color: #999;margin-left: 0.08rem;}
-	.shop2_content .pre_div{position: absolute;bottom: 0.45rem;left: 02.47rem;width: 1.54rem;}
+	.shop2_content .pre_div{position: absolute;bottom: 0.40rem;left: 2.47rem;width: 1.54rem;}
 	.shop2_content .num_div {float: left;border: 1px solid #ccc;box-sizing: border-box;height: 0.5rem;width: 1.56rem;position: relative;}
 	.shop2_content .num_div span{float: left;width: 0.5rem;height: 0.5rem;cursor: pointer;display: block;}
 	.shop2_content .num_div span.sub{background: url(../img/png/sub.png) no-repeat center center;background-size: 0.17rem;
@@ -1999,9 +2000,9 @@
 	.haircare .bnr_div .hui p{font-size: 0.24rem;color: #fff;line-height: 0.28rem;display: inline-block;vertical-align: middle;}
 	
 	.haircare .text2 {padding: 0.15rem 0.2rem 0.4rem 0.2rem;}
-	.haircare .text2 .left p {font-size: 0.18rem;color: #666;line-height: 0.18rem;height: 0.18rem;min-height: 14px; display: inline-block;float: left;}
+	.haircare .text2 .left p {font-size: 0.18rem;color: #666;height: 0.18rem;min-height: 14px; display: inline-block;float: left;}
 	.haircare .text2 .left p span{color: #d5af74;}
-	.haircare .text2 .ll_span{background: url(../img/png/yanj.png)no-repeat left center;background-size: 0.28rem;
+	.haircare .text2 .ll_span{background: url(../img/png/yanj.png)no-repeat left center;background-size: 0.28rem;font-size: 0.18rem;
 	padding-left: 0.4rem;margin-left: 0.5rem;display: inline-block;float: left;}
 	.haircare .text2 ul li{float: left;margin-left: 0.08rem;width: 0.4rem;height: 0.4rem}
 	.haircare .text3 {padding:  0 0.2rem 0.6rem 0.2rem;}
@@ -2068,13 +2069,13 @@
 	.hairclub .bnr_img{display: block;margin:0 auto 0.4rem auto;}
 	.hairclub h1{font-size: 0.24rem;line-height: 0.24rem; font-weight: normal;text-align: center;font-family: bau;margin-top: 0.4rem;}
 	.hairclub>p{font-size: 0.18rem;color: #666;line-height: 0.18rem;text-align: center;margin-top: 0.15rem;}
-	.hairclub .video_ul{margin: 0 -0.15rem;padding:  0.35rem 0.2rem 0 0.2rem;}
+	.hairclub .video_ul{padding:  0.35rem 0.2rem 0 0.2rem;box-sizing: border-box}
 	.hairclub .video_ul li{width: 50%;float: left;height: 1.92rem;position: relative;margin-bottom: 0.3rem;}
 	.hairclub .video_ul li video{width: 100%;height: 100%;}
 	.hairclub .video_ul li img.bf{position: absolute;top: 50%;left: 50%;width: 0.44rem;height: 0.44rem; margin-top: -0.22rem;margin-left: -0.22rem;cursor: pointer;}
 	.hairclub .video_ul li .text_vd{overflow: hidden;height: 0.6rem;position: absolute;bottom: 0;left: 0;width: 100%;}
 	.hairclub .video_ul li .bg_div{height: 0.6rem;background: rgba(0,0,0,.5);padding: 0 0.1rem;line-height: 0.6rem;
-	border-radius: 0px 0px 5px 5px;overflow: hidden;margin: 0 0.15rem;display: flex;align-items: center;}
+	border-radius: 0px 0px 5px 5px;overflow: hidden;margin: 0 0.08rem;display: flex;align-items: center;}
 	.hairclub .video_ul li .bg_div p{font-size: 0.18rem;font-family: "微软雅黑"; line-height: 0.22rem;color: #fff;display: inline-block;vertical-align: middle;}
 	@media only screen and (min-width: 751px) and (max-width: 992px) {
 		.hairclub .video_ul{margin: 0 -15px;padding: 35px 2px 0 2px;}
