--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -124,8 +124,8 @@ header{position:fixed;top:0;left:0;width:100%;background: #fff;z-index:10;height
 line-height: 16px;margin-right: 18px;background-size: 16px 16px;font-size: 16px;}
 .nav .mn_type .top p.currency_USD{background: url(../img/png/usd1.png) no-repeat left center;background-size: 16px 16px;}
 .nav .mn_type .top p.currency_EUR{background: url(../img/png/eur1.png) no-repeat left center;background-size: 16px 16px;}
-.nav .mn_type .top p.currency_GBP{background: url(../img/png/zar1.png) no-repeat left center;background-size: 16px 16px;}
-/*.nav .mn_type .top p.currency_NAN{background: url(../img/png/ngn1.png) no-repeat left center;background-size: 16px 16px;}*/
+.nav .mn_type .top p.currency_GBP{background: url(../img/png/ngn1.png) no-repeat left center;background-size: 16px 16px;}
+.nav .mn_type .top p.currency_NGN{background: url(../img/png/zar1.png) no-repeat left center;background-size: 16px 16px;}
 .nav .mn_type .top .pic_img{float: left; position: relative;top: -5px;width: 34px;height:28px;padding: 10px;}
 
 .nav .mn_type .bot{display: none;position: absolute;top: 15px;left: 0px;z-index: 9;padding-top: 10px;}
@@ -138,17 +138,17 @@ line-height: 16px;margin-right: 18px;background-size: 16px 16px;font-size: 16px;
 .nav .mn_type .ul_type li.currency_select_EUR{background: url(../img/png/eur1.png) no-repeat left center;background-size: 16px 16px;}
 .nav .mn_type .ul_type li.currency_select_GBP{background: url(../img/png/ngn1.png) no-repeat left center;background-size: 16px 16px;}
 .nav .mn_type .ul_type li.currency_select_USD{background: url(../img/png/usd1.png) no-repeat left center;background-size: 16px 16px;}
-
+.nav .mn_type .ul_type li.currency_select_NGN{background: url(../img/png/zar1.png) no-repeat left center;background-size: 16px 16px;}
 .nav .logo a{display: block;width: 334px;margin: auto;}
 .nav .logo img{margin:30px auto ;display: block;}
 
 
 .nav .nav_ul{float: left;}
-.nav .nav_ul>li{float: left;margin-right: 20px;font-size: 16px;line-height: 16px;padding-bottom: 8px;
+.nav .nav_ul>li{float: left;margin-right: 20px;font-size: 16px;line-height: 16px;
 border-bottom:2px solid transparent ;position: relative;}
 .nav .nav_ul>li:hover{border-bottom:2px solid #444 ;}
 .nav .nav_ul>li.active{border-bottom:2px solid #444 ;}
-.nav .nav_ul>li a{font-family: georgia;color: #444;}
+.nav .nav_ul>li a{font-family: georgia;color: #444;padding-bottom: 8px;}
 .nav .nav_ul>li .text{background: #fff;width: 300px;position: absolute;top: 26px; left: -20px; z-index: 9;padding: 0 20px;}
 .nav .nav_ul>li ol{padding-top: 25px;display: none;}
 .nav .nav_ul>li ol li{margin-bottom: 20px;}
@@ -158,7 +158,7 @@ border-bottom:2px solid transparent ;position: relative;}
 .nav .img_ol li{width: 28px;height: 28px;float: left;text-align: center;margin-right: 20px;cursor: pointer;position: relative;}
 .nav .img_ol li a{display: block;width: 28px;height: 28px;}
 .nav .img_ol li span{font-family: tahoma; font-size: 12px;color: #999;line-height: 18px;display: block;
-position: absolute;top: bottom:16px;right: -7px;}
+position: absolute;bottom:16px;right: -7px;}
 .nav .img_ol li:nth-child(1){background: url(../img/png/searchs.png) no-repeat center center;background-size: 28px ;}
 .nav .img_ol li:nth-child(2){background: url(../img/png/mime.png) no-repeat center center;}
 .nav .img_ol li:nth-child(3){background: url(../img/png/xingxing.png) no-repeat center center;}
@@ -196,9 +196,9 @@ display: block;float: left;height: 30px;opacity: .5;}
 .footer a{font-size: 14px;line-height: 14px; color: #333;display: block;margin-bottom: 16px;}
 .footer a:hover{text-decoration: underline;}
 .footer p{font-size: 14px;line-height: 14px; color: #333;display: block;margin-bottom: 16px;}
+.footer p>a{display: inline-block;}
 .footer .left{float: left;}
-.footer .left ul{}
-.footer .left ul>li{display: inline-block;float: left;margin-right: 5.4vw;margin-bottom: 1.04vw;max-width: 300px;}
+.footer .left ul>li{display: inline-block;float: left;margin-right: 5.4vw;margin-bottom: 1.04vw;max-width: 300px;min-height: 224px;}
 /*.footer .left ul>li:nth-child(4){border-right: 1px solid #ccc;margin-right: 5.8vw;}*/
 .footer .left ul>li:last-child{margin-right: 0;}
 .footer .left ul>li input{border: 1px solid #8e8e8e;border-radius: 5px;background: transparent;height: 40px;
@@ -328,12 +328,14 @@ display: block;width: 100%;padding:0 0.4rem;box-sizing: border-box;}
 	 border-color: transparent transparent #eee;position: absolute;top: 0px;left: 50%;margin-left: -0.1rem;}
 	 .nav.mn_type .bot span em{display: block;width: 0;height: 0; border-width: 0 0.1rem 0.1rem;border-style: solid;
 	 border-color: transparent transparent #fff;position: absolute;top: 1px;left: -0.1rem;}
-	.nav .mn_type .ul_type {background: #fff;border: 1px solid #eee;border-radius: 4px; width: 2rem;padding:0.1rem 0.2rem 0.1rem 0.29rem;}
-	.nav .mn_type .ul_type li{padding-left: 0.5rem;font-size: 0.24rem; line-height: 0.3rem;margin: 0.35rem 0;}
-	
+	.nav .mn_type .ul_type {background: #fff;border: 1px solid #eee;border-radius: 4px; width: 2rem;padding:0 0.2rem 0 0.29rem;}
+	.nav .mn_type .ul_type li{padding-left: 0.5rem;font-size: 0.24rem; line-height: 0.32rem;margin: 0.35rem 0;}
+	.nav .mn_type .ul_type li>a{display: block;position: relative;top: 0.03rem;}
 	.nav .mn_type .ul_type li.currency_select_EUR{background: url(../img/png/eur1.png) no-repeat left center;background-size: 0.3rem 0.3rem;}
 	.nav .mn_type .ul_type li.currency_select_GBP{background: url(../img/png/ngn1.png) no-repeat left center;background-size: 0.3rem 0.3rem;}
 	.nav .mn_type .ul_type li.currency_select_USD{background: url(../img/png/usd1.png) no-repeat left center;background-size: 0.3rem 0.3rem;}
+	.nav .mn_type .ul_type li.currency_select_NGN{background: url(../img/png/zar1.png) no-repeat left center;background-size: 0.3rem 0.3rem;}
+	
 	
 	.nav form.search{border-bottom: 2px solid #d5af74;width: 100%;height: 0.96rem;line-height: 0.96rem;box-sizing: border-box;
 	opacity: 0;background: #fff;border-radius: 0;position: absolute;right: 0%;left: 0; top:1.2rem;z-index: 9;}
