--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -64,6 +64,10 @@ header{position:fixed;top:0;left:0;width:100%;background: #fff;z-index:10;height
 .zzc_div{width: 100%;height: 100%;position: fixed;z-index:11;left: 0;top: 0;background: rgba(0,0,0,.0);display: none;}
 .bg_fff{background: #fff;}
 .bg_gif{background:#fff url(../img/loading.gif) no-repeat center top;min-height: 300px;}
+@media only screen and (min-width: 1px) and (max-width: 768px) {
+	.bg_gif{background:#fff url(../img/loading.gif) no-repeat center top;min-height: 2.4rem;}
+	
+}
 
 .btn240{width:240px;height:40px;text-align: center;line-height: 40px;background: #333;font-size: 16px;color: #fff;display: block;border-radius: 4px;font-weight: normal;}
 .btn240:hover{background: #666;}
@@ -158,7 +162,6 @@ border-bottom:2px solid transparent ;position: relative;}
 .nav .img_ol li{min-width: 28px;padding-top: 30px; display: inline-block;float: left;font-family: georgia;color: #444;font-size: 14px;
 text-align: center;margin-right: 20px;cursor: pointer;position: relative;}
 .nav .img_ol li a{display: block;width: 28px;height: 28px;position: absolute;top: 0;left: 0;}
-.nav .img_ol li p{}
 .nav .img_ol li span{font-family: tahoma; font-size: 12px;color: #999;line-height: 18px;display: block;
 position: absolute;top:0;right: -8px;}
 .nav .img_ol li:nth-child(1){background: url(../img/png/searchs.png) no-repeat center top;background-size: 28px ;}
@@ -166,6 +169,14 @@ position: absolute;top:0;right: -8px;}
 .nav .img_ol li:nth-child(3){background: url(../img/png/xingxing.png) no-repeat center top;}
 .nav .img_ol li:nth-child(4){background: url(../img/png/carts.png) no-repeat center top;margin-right: 0;}
 
+@media only screen and (min-width: 993px) and (max-width: 1170px) {
+	.nav .nav_ul>li{margin-right: 12px !important;}
+	.nav .img_ol li{padding-top: 23px;font-size: 10px;margin-right: 8px !important;}
+	.nav .img_ol li:nth-child(1){background: url(../img/png/searchs.png) no-repeat center top;background-size: 22px ;}
+	.nav .img_ol li:nth-child(2){background: url(../img/png/mime.png) no-repeat center top;background-size: 22px ;}
+	.nav .img_ol li:nth-child(3){background: url(../img/png/xingxing.png) no-repeat center top;background-size: 22px ;}
+	.nav .img_ol li:nth-child(4){background: url(../img/png/carts.png) no-repeat center top;margin-right: 0;background-size: 22px ;}
+}
 
 .nav form.search{border-bottom: 2px solid #d5af74;width: 320px;height: 32px;line-height: 32px;box-sizing: border-box;
 opacity: 0;background: #fff;border-radius: 5px 5px 0 0;position: absolute;right: 172px;z-index: 9;display: none;}
@@ -227,7 +238,7 @@ text-align: center; position: absolute;bottom: 10px;}
 text-align: center; position: absolute;bottom: 10px;}
 
 /**移动端底部**/
-.yd_footer{background: #313131;padding:  0.4rem 0rem 0 0rem;margin-bottom:1.2rem; display: none;}
+.yd_footer{background: #313131;padding:  0.4rem 0rem 0 0rem;margin-bottom:1.5rem; display: none;}
 .yd_footer .top{width: 100%;padding:  0 0.4rem;}
 .yd_footer .ul_ydfot>li{width: 100%;margin-bottom: 0.6rem;}
 .yd_footer .ul_ydfot>li h4{font-family: san_r; font-size: 0.28rem;color: #ccc;line-height: 0.28rem;font-weight: normal;}
@@ -248,8 +259,8 @@ text-align: center; position: absolute;bottom: 10px;}
 .yd_footer p span{font-weight: bold;font-size: 0.2rem;}
 
 
-.yd_footer2{position: fixed;bottom: 0;left: 0;width: 100%;height:1rem;background: #fff;z-index: 99;display: none;-webkit-overflow-scrolling: touch;}
-.yd_footer2 .ol_ydfot{border-top: 1px solid #ddd;}
+.yd_footer2{position: fixed;bottom: 0;left: 0;width: 100%;height:1.1rem;background: #000;z-index: 99;display: none;-webkit-overflow-scrolling: touch;}
+.yd_footer2 .ol_ydfot{border-top: 1px solid #fff;padding-top: 0.07rem;}
 .yd_footer2 .ol_ydfot li{float: left;width: 20%;text-align: center;position: relative;}
 .yd_footer2 .ol_ydfot li .a_text{position: absolute;bottom: 100%;left: 0;display: none;}
 .yd_footer2 .ol_ydfot li .a_text a{display: block;width: 2rem;height: 1.2rem;}
@@ -258,8 +269,8 @@ text-align: center; position: absolute;bottom: 10px;}
 .yd_footer2 .ol_ydfot li:last-child{border-right: none;}
 .yd_footer2 .ol_ydfot li img{display: none;margin:0.15rem auto 0.1rem auto;width: 0.4rem;height: 0.4rem;}
 .yd_footer2 .ol_ydfot li img.active{display: block;}
-.yd_footer2 .ol_ydfot li p{font-family: san_m;font-size: 0.18rem;color: #999;line-height: 0.2rem;}
-.yd_footer2 .ol_ydfot li.active p{color: #000;}
+.yd_footer2 .ol_ydfot li p{font-family: san_m;font-size: 0.2rem;color: #bbb;line-height: 0.2rem;}
+.yd_footer2 .ol_ydfot li.active p{color: #fff;}
 .yd_footer2 .ol_ydfot li.active img{display: block;}
 .yd_footer2 .ol_ydfot li.active img.active{display: none;}
 
